parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    QUOTE

Grammar

Rule 0     S' -> program
Rule 1     program -> program statement
Rule 2     program -> statement
Rule 3     statement -> records
Rule 4     statement -> sentgroup
Rule 5     statement -> func
Rule 6     program -> error
Rule 7     func -> def ids LBRACKET list RBRACKET sentgroup
Rule 8     func -> def error LBRACKET list RBRACKET sentgroup
Rule 9     func -> def ids LBRACKET error RBRACKET sentgroup
Rule 10    func -> def ids LBRACKET error RBRACKET error
Rule 11    func -> def error
Rule 12    ids -> ID
Rule 13    list -> type ids AND COMMA list
Rule 14    list -> ID ids AND COMMA list
Rule 15    list -> type ids COMMA list
Rule 16    list -> ID ids COMMA list
Rule 17    list -> type ids AND
Rule 18    list -> type ids
Rule 19    list -> ID ids
Rule 20    list -> <empty>
Rule 21    type -> bool
Rule 22    type -> int
Rule 23    type -> string
Rule 24    type -> struct
Rule 25    sentgroup -> start sentencess end
Rule 26    define -> int ids
Rule 27    define -> bool ids
Rule 28    define -> string ids
Rule 29    define -> ID ids
Rule 30    define -> int ids LBRACKET NUMBER RBRACKET
Rule 31    define -> boolean ids LBRACKET NUMBER RBRACKET
Rule 32    define -> string ids LBRACKET NUMBER RBRACKET
Rule 33    sentencess -> sentencess sentence
Rule 34    sentencess -> sentence
Rule 35    sentence -> cfunc
Rule 36    sentence -> expression
Rule 37    sentence -> logic
Rule 38    sentence -> define
Rule 39    sentence -> assignment
Rule 40    sentence -> move
Rule 41    sentence -> ping
Rule 42    sentence -> sensor
Rule 43    sentence -> error
Rule 44    records -> record records
Rule 45    records -> record
Rule 46    record -> struct ID info deflst
Rule 47    record -> struct ID info deflst convert to deflst
Rule 48    record -> struct ID info deflst convert from deflst
Rule 49    record -> struct ID info deflst convert to deflst convert from deflst
Rule 50    deflst -> type ids deflst
Rule 51    deflst -> type ids
Rule 52    logic -> LBRACE lexp RBRACE sentgroup
Rule 53    lexp -> expression lt expression
Rule 54    lexp -> expression gt expression
Rule 55    lexp -> expression deg expression
Rule 56    lexp -> expression ex expression
Rule 57    lt -> LTR
Rule 58    lt -> LTL
Rule 59    lt -> LT
Rule 60    gt -> GTR
Rule 61    gt -> GTL
Rule 62    gt -> GT
Rule 63    deg -> DEQR
Rule 64    deg -> DEQL
Rule 65    deg -> DEQ
Rule 66    ex -> EXR
Rule 67    ex -> EXL
Rule 68    ex -> EX
Rule 69    expression -> expression plus expression
Rule 70    expression -> expression minus expression
Rule 71    expression -> expression times expression
Rule 72    expression -> expression divide expression
Rule 73    expression -> expression power expression
Rule 74    expression -> <empty>
Rule 75    plus -> PLR
Rule 76    plus -> PLL
Rule 77    plus -> PLUS
Rule 78    minus -> MNR
Rule 79    minus -> MNL
Rule 80    minus -> MINUS
Rule 81    times -> TMR
Rule 82    times -> TML
Rule 83    times -> TIMES
Rule 84    divide -> DVR
Rule 85    divide -> DVL
Rule 86    divide -> DIVIDE
Rule 87    power -> PWR
Rule 88    power -> PWL
Rule 89    power -> POWER
Rule 90    str -> STR
Rule 91    expression -> str
Rule 92    expression -> num
Rule 93    num -> NUMBER
Rule 94    expression -> ids
Rule 95    expression -> boolean
Rule 96    expression -> MINUS expression
Rule 97    cfunc -> ids LBRACKET exprgroup RBRACKET
Rule 98    cfunc -> ids LBRACKET ids RBRACKET
Rule 99    cfunc -> ids LBRACKET RBRACKET
Rule 100   exprgroup -> expression COMMA exprgroup
Rule 101   exprgroup -> expression
Rule 102   assignment -> ids EQ var
Rule 103   assignment -> ids EQ expression
Rule 104   assignment -> ids EQ str
Rule 105   assignment -> ids EQ ID LBRACKET ids RBRACKET
Rule 106   assignment -> ids LBRACKET expression RBRACKET EQ expression
Rule 107   assignment -> ids LBRACKET ids RBRACKET EQ expression
Rule 108   move -> up LBRACKET steps RBRACKET
Rule 109   move -> down LBRACKET steps RBRACKET
Rule 110   move -> left LBRACKET steps RBRACKET
Rule 111   move -> right LBRACKET steps RBRACKET
Rule 112   steps -> expression
Rule 113   steps -> ids
Rule 114   ping -> knockup LBRACKET steps RBRACKET
Rule 115   ping -> knockdown LBRACKET steps RBRACKET
Rule 116   ping -> knockright LBRACKET steps RBRACKET
Rule 117   ping -> knockleft LBRACKET steps RBRACKET
Rule 118   boolean -> false
Rule 119   boolean -> true
Rule 120   boolean -> var
Rule 121   sensor -> vision LBRACKET ids RBRACKET
Rule 122   sensor -> input LBRACKET ids RBRACKET

Terminals, with rules where they appear

AND                  : 13 14 17
COMMA                : 13 14 15 16 100
DEQ                  : 65
DEQL                 : 64
DEQR                 : 63
DIVIDE               : 86
DVL                  : 85
DVR                  : 84
EQ                   : 102 103 104 105 106 107
EX                   : 68
EXL                  : 67
EXR                  : 66
GT                   : 62
GTL                  : 61
GTR                  : 60
ID                   : 12 14 16 19 29 46 47 48 49 105
LBRACE               : 52
LBRACKET             : 7 8 9 10 30 31 32 97 98 99 105 106 107 108 109 110 111 114 115 116 117 121 122
LT                   : 59
LTL                  : 58
LTR                  : 57
MINUS                : 80 96
MNL                  : 79
MNR                  : 78
NUMBER               : 30 31 32 93
PLL                  : 76
PLR                  : 75
PLUS                 : 77
POWER                : 89
PWL                  : 88
PWR                  : 87
QUOTE                : 
RBRACE               : 52
RBRACKET             : 7 8 9 10 30 31 32 97 98 99 105 106 107 108 109 110 111 114 115 116 117 121 122
STR                  : 90
TIMES                : 83
TML                  : 82
TMR                  : 81
bool                 : 21 27
convert              : 47 48 49 49
def                  : 7 8 9 10 11
down                 : 109
end                  : 25
error                : 6 8 9 10 10 11 43
false                : 118
from                 : 48 49
info                 : 46 47 48 49
input                : 122
int                  : 22 26 30
knockdown            : 115
knockleft            : 117
knockright           : 116
knockup              : 114
left                 : 110
right                : 111
start                : 25
string               : 23 28 32
struct               : 24 46 47 48 49
to                   : 47 49
true                 : 119
up                   : 108
var                  : 102 120
vision               : 121

Nonterminals, with rules where they appear

assignment           : 39
boolean              : 31 95
cfunc                : 35
define               : 38
deflst               : 46 47 47 48 48 49 49 49 50
deg                  : 55
divide               : 72
ex                   : 56
expression           : 36 53 53 54 54 55 55 56 56 69 69 70 70 71 71 72 72 73 73 96 100 101 103 106 106 107 112
exprgroup            : 97 100
func                 : 5
gt                   : 54
ids                  : 7 9 10 13 14 15 16 17 18 19 26 27 28 29 30 31 32 50 51 94 97 98 98 99 102 103 104 105 105 106 107 107 113 121 122
lexp                 : 52
list                 : 7 8 13 14 15 16
logic                : 37
lt                   : 53
minus                : 70
move                 : 40
num                  : 92
ping                 : 41
plus                 : 69
power                : 73
program              : 1 0
record               : 44 45
records              : 3 44
sensor               : 42
sentence             : 33 34
sentencess           : 25 33
sentgroup            : 4 7 8 9 52
statement            : 1 2
steps                : 108 109 110 111 114 115 116 117
str                  : 91 104
times                : 71
type                 : 13 15 17 18 50 51

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program statement
    (2) program -> . statement
    (6) program -> . error
    (3) statement -> . records
    (4) statement -> . sentgroup
    (5) statement -> . func
    (44) records -> . record records
    (45) records -> . record
    (25) sentgroup -> . start sentencess end
    (7) func -> . def ids LBRACKET list RBRACKET sentgroup
    (8) func -> . def error LBRACKET list RBRACKET sentgroup
    (9) func -> . def ids LBRACKET error RBRACKET sentgroup
    (10) func -> . def ids LBRACKET error RBRACKET error
    (11) func -> . def error
    (46) record -> . struct ID info deflst
    (47) record -> . struct ID info deflst convert to deflst
    (48) record -> . struct ID info deflst convert from deflst
    (49) record -> . struct ID info deflst convert to deflst convert from deflst

    error           shift and go to state 3
    start           shift and go to state 8
    def             shift and go to state 9
    struct          shift and go to state 10

    program                        shift and go to state 1
    statement                      shift and go to state 2
    records                        shift and go to state 4
    sentgroup                      shift and go to state 5
    func                           shift and go to state 6
    record                         shift and go to state 7

state 1

    (0) S' -> program .
    (1) program -> program . statement
    (3) statement -> . records
    (4) statement -> . sentgroup
    (5) statement -> . func
    (44) records -> . record records
    (45) records -> . record
    (25) sentgroup -> . start sentencess end
    (7) func -> . def ids LBRACKET list RBRACKET sentgroup
    (8) func -> . def error LBRACKET list RBRACKET sentgroup
    (9) func -> . def ids LBRACKET error RBRACKET sentgroup
    (10) func -> . def ids LBRACKET error RBRACKET error
    (11) func -> . def error
    (46) record -> . struct ID info deflst
    (47) record -> . struct ID info deflst convert to deflst
    (48) record -> . struct ID info deflst convert from deflst
    (49) record -> . struct ID info deflst convert to deflst convert from deflst

    start           shift and go to state 8
    def             shift and go to state 9
    struct          shift and go to state 10

    statement                      shift and go to state 11
    records                        shift and go to state 4
    sentgroup                      shift and go to state 5
    func                           shift and go to state 6
    record                         shift and go to state 7

state 2

    (2) program -> statement .

    start           reduce using rule 2 (program -> statement .)
    def             reduce using rule 2 (program -> statement .)
    struct          reduce using rule 2 (program -> statement .)
    $end            reduce using rule 2 (program -> statement .)


state 3

    (6) program -> error .

    start           reduce using rule 6 (program -> error .)
    def             reduce using rule 6 (program -> error .)
    struct          reduce using rule 6 (program -> error .)
    $end            reduce using rule 6 (program -> error .)


state 4

    (3) statement -> records .

    start           reduce using rule 3 (statement -> records .)
    def             reduce using rule 3 (statement -> records .)
    struct          reduce using rule 3 (statement -> records .)
    $end            reduce using rule 3 (statement -> records .)


state 5

    (4) statement -> sentgroup .

    start           reduce using rule 4 (statement -> sentgroup .)
    def             reduce using rule 4 (statement -> sentgroup .)
    struct          reduce using rule 4 (statement -> sentgroup .)
    $end            reduce using rule 4 (statement -> sentgroup .)


state 6

    (5) statement -> func .

    start           reduce using rule 5 (statement -> func .)
    def             reduce using rule 5 (statement -> func .)
    struct          reduce using rule 5 (statement -> func .)
    $end            reduce using rule 5 (statement -> func .)


state 7

    (44) records -> record . records
    (45) records -> record .
    (44) records -> . record records
    (45) records -> . record
    (46) record -> . struct ID info deflst
    (47) record -> . struct ID info deflst convert to deflst
    (48) record -> . struct ID info deflst convert from deflst
    (49) record -> . struct ID info deflst convert to deflst convert from deflst

  ! shift/reduce conflict for struct resolved as shift
    start           reduce using rule 45 (records -> record .)
    def             reduce using rule 45 (records -> record .)
    $end            reduce using rule 45 (records -> record .)
    struct          shift and go to state 10

  ! struct          [ reduce using rule 45 (records -> record .) ]

    record                         shift and go to state 7
    records                        shift and go to state 12

state 8

    (25) sentgroup -> start . sentencess end
    (33) sentencess -> . sentencess sentence
    (34) sentencess -> . sentence
    (35) sentence -> . cfunc
    (36) sentence -> . expression
    (37) sentence -> . logic
    (38) sentence -> . define
    (39) sentence -> . assignment
    (40) sentence -> . move
    (41) sentence -> . ping
    (42) sentence -> . sensor
    (43) sentence -> . error
    (97) cfunc -> . ids LBRACKET exprgroup RBRACKET
    (98) cfunc -> . ids LBRACKET ids RBRACKET
    (99) cfunc -> . ids LBRACKET RBRACKET
    (69) expression -> . expression plus expression
    (70) expression -> . expression minus expression
    (71) expression -> . expression times expression
    (72) expression -> . expression divide expression
    (73) expression -> . expression power expression
    (74) expression -> .
    (91) expression -> . str
    (92) expression -> . num
    (94) expression -> . ids
    (95) expression -> . boolean
    (96) expression -> . MINUS expression
    (52) logic -> . LBRACE lexp RBRACE sentgroup
    (26) define -> . int ids
    (27) define -> . bool ids
    (28) define -> . string ids
    (29) define -> . ID ids
    (30) define -> . int ids LBRACKET NUMBER RBRACKET
    (31) define -> . boolean ids LBRACKET NUMBER RBRACKET
    (32) define -> . string ids LBRACKET NUMBER RBRACKET
    (102) assignment -> . ids EQ var
    (103) assignment -> . ids EQ expression
    (104) assignment -> . ids EQ str
    (105) assignment -> . ids EQ ID LBRACKET ids RBRACKET
    (106) assignment -> . ids LBRACKET expression RBRACKET EQ expression
    (107) assignment -> . ids LBRACKET ids RBRACKET EQ expression
    (108) move -> . up LBRACKET steps RBRACKET
    (109) move -> . down LBRACKET steps RBRACKET
    (110) move -> . left LBRACKET steps RBRACKET
    (111) move -> . right LBRACKET steps RBRACKET
    (114) ping -> . knockup LBRACKET steps RBRACKET
    (115) ping -> . knockdown LBRACKET steps RBRACKET
    (116) ping -> . knockright LBRACKET steps RBRACKET
    (117) ping -> . knockleft LBRACKET steps RBRACKET
    (121) sensor -> . vision LBRACKET ids RBRACKET
    (122) sensor -> . input LBRACKET ids RBRACKET
    (12) ids -> . ID
    (90) str -> . STR
    (93) num -> . NUMBER
    (118) boolean -> . false
    (119) boolean -> . true
    (120) boolean -> . var

  ! shift/reduce conflict for error resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for LBRACE resolved as shift
  ! shift/reduce conflict for int resolved as shift
  ! shift/reduce conflict for bool resolved as shift
  ! shift/reduce conflict for string resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for up resolved as shift
  ! shift/reduce conflict for down resolved as shift
  ! shift/reduce conflict for left resolved as shift
  ! shift/reduce conflict for right resolved as shift
  ! shift/reduce conflict for knockup resolved as shift
  ! shift/reduce conflict for knockdown resolved as shift
  ! shift/reduce conflict for knockright resolved as shift
  ! shift/reduce conflict for knockleft resolved as shift
  ! shift/reduce conflict for vision resolved as shift
  ! shift/reduce conflict for input resolved as shift
  ! shift/reduce conflict for STR resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for false resolved as shift
  ! shift/reduce conflict for true resolved as shift
  ! shift/reduce conflict for var resolved as shift
    error           shift and go to state 23
    PLR             reduce using rule 74 (expression -> .)
    PLL             reduce using rule 74 (expression -> .)
    PLUS            reduce using rule 74 (expression -> .)
    MNR             reduce using rule 74 (expression -> .)
    MNL             reduce using rule 74 (expression -> .)
    TMR             reduce using rule 74 (expression -> .)
    TML             reduce using rule 74 (expression -> .)
    TIMES           reduce using rule 74 (expression -> .)
    DVR             reduce using rule 74 (expression -> .)
    DVL             reduce using rule 74 (expression -> .)
    DIVIDE          reduce using rule 74 (expression -> .)
    PWR             reduce using rule 74 (expression -> .)
    PWL             reduce using rule 74 (expression -> .)
    POWER           reduce using rule 74 (expression -> .)
    end             reduce using rule 74 (expression -> .)
    MINUS           shift and go to state 28
    LBRACE          shift and go to state 29
    int             shift and go to state 30
    bool            shift and go to state 31
    string          shift and go to state 32
    ID              shift and go to state 33
    up              shift and go to state 36
    down            shift and go to state 37
    left            shift and go to state 38
    right           shift and go to state 39
    knockup         shift and go to state 40
    knockdown       shift and go to state 41
    knockright      shift and go to state 42
    knockleft       shift and go to state 43
    vision          shift and go to state 44
    input           shift and go to state 45
    STR             shift and go to state 46
    NUMBER          shift and go to state 34
    false           shift and go to state 47
    true            shift and go to state 48
    var             shift and go to state 35

  ! MINUS           [ reduce using rule 74 (expression -> .) ]
  ! error           [ reduce using rule 74 (expression -> .) ]
  ! LBRACE          [ reduce using rule 74 (expression -> .) ]
  ! int             [ reduce using rule 74 (expression -> .) ]
  ! bool            [ reduce using rule 74 (expression -> .) ]
  ! string          [ reduce using rule 74 (expression -> .) ]
  ! ID              [ reduce using rule 74 (expression -> .) ]
  ! up              [ reduce using rule 74 (expression -> .) ]
  ! down            [ reduce using rule 74 (expression -> .) ]
  ! left            [ reduce using rule 74 (expression -> .) ]
  ! right           [ reduce using rule 74 (expression -> .) ]
  ! knockup         [ reduce using rule 74 (expression -> .) ]
  ! knockdown       [ reduce using rule 74 (expression -> .) ]
  ! knockright      [ reduce using rule 74 (expression -> .) ]
  ! knockleft       [ reduce using rule 74 (expression -> .) ]
  ! vision          [ reduce using rule 74 (expression -> .) ]
  ! input           [ reduce using rule 74 (expression -> .) ]
  ! STR             [ reduce using rule 74 (expression -> .) ]
  ! NUMBER          [ reduce using rule 74 (expression -> .) ]
  ! false           [ reduce using rule 74 (expression -> .) ]
  ! true            [ reduce using rule 74 (expression -> .) ]
  ! var             [ reduce using rule 74 (expression -> .) ]

    sentencess                     shift and go to state 13
    sentence                       shift and go to state 14
    cfunc                          shift and go to state 15
    expression                     shift and go to state 16
    logic                          shift and go to state 17
    define                         shift and go to state 18
    assignment                     shift and go to state 19
    move                           shift and go to state 20
    ping                           shift and go to state 21
    sensor                         shift and go to state 22
    ids                            shift and go to state 24
    str                            shift and go to state 25
    num                            shift and go to state 26
    boolean                        shift and go to state 27

state 9

    (7) func -> def . ids LBRACKET list RBRACKET sentgroup
    (8) func -> def . error LBRACKET list RBRACKET sentgroup
    (9) func -> def . ids LBRACKET error RBRACKET sentgroup
    (10) func -> def . ids LBRACKET error RBRACKET error
    (11) func -> def . error
    (12) ids -> . ID

    error           shift and go to state 50
    ID              shift and go to state 51

    ids                            shift and go to state 49

state 10

    (46) record -> struct . ID info deflst
    (47) record -> struct . ID info deflst convert to deflst
    (48) record -> struct . ID info deflst convert from deflst
    (49) record -> struct . ID info deflst convert to deflst convert from deflst

    ID              shift and go to state 52


state 11

    (1) program -> program statement .

    start           reduce using rule 1 (program -> program statement .)
    def             reduce using rule 1 (program -> program statement .)
    struct          reduce using rule 1 (program -> program statement .)
    $end            reduce using rule 1 (program -> program statement .)


state 12

    (44) records -> record records .

    start           reduce using rule 44 (records -> record records .)
    def             reduce using rule 44 (records -> record records .)
    struct          reduce using rule 44 (records -> record records .)
    $end            reduce using rule 44 (records -> record records .)


state 13

    (25) sentgroup -> start sentencess . end
    (33) sentencess -> sentencess . sentence
    (35) sentence -> . cfunc
    (36) sentence -> . expression
    (37) sentence -> . logic
    (38) sentence -> . define
    (39) sentence -> . assignment
    (40) sentence -> . move
    (41) sentence -> . ping
    (42) sentence -> . sensor
    (43) sentence -> . error
    (97) cfunc -> . ids LBRACKET exprgroup RBRACKET
    (98) cfunc -> . ids LBRACKET ids RBRACKET
    (99) cfunc -> . ids LBRACKET RBRACKET
    (69) expression -> . expression plus expression
    (70) expression -> . expression minus expression
    (71) expression -> . expression times expression
    (72) expression -> . expression divide expression
    (73) expression -> . expression power expression
    (74) expression -> .
    (91) expression -> . str
    (92) expression -> . num
    (94) expression -> . ids
    (95) expression -> . boolean
    (96) expression -> . MINUS expression
    (52) logic -> . LBRACE lexp RBRACE sentgroup
    (26) define -> . int ids
    (27) define -> . bool ids
    (28) define -> . string ids
    (29) define -> . ID ids
    (30) define -> . int ids LBRACKET NUMBER RBRACKET
    (31) define -> . boolean ids LBRACKET NUMBER RBRACKET
    (32) define -> . string ids LBRACKET NUMBER RBRACKET
    (102) assignment -> . ids EQ var
    (103) assignment -> . ids EQ expression
    (104) assignment -> . ids EQ str
    (105) assignment -> . ids EQ ID LBRACKET ids RBRACKET
    (106) assignment -> . ids LBRACKET expression RBRACKET EQ expression
    (107) assignment -> . ids LBRACKET ids RBRACKET EQ expression
    (108) move -> . up LBRACKET steps RBRACKET
    (109) move -> . down LBRACKET steps RBRACKET
    (110) move -> . left LBRACKET steps RBRACKET
    (111) move -> . right LBRACKET steps RBRACKET
    (114) ping -> . knockup LBRACKET steps RBRACKET
    (115) ping -> . knockdown LBRACKET steps RBRACKET
    (116) ping -> . knockright LBRACKET steps RBRACKET
    (117) ping -> . knockleft LBRACKET steps RBRACKET
    (121) sensor -> . vision LBRACKET ids RBRACKET
    (122) sensor -> . input LBRACKET ids RBRACKET
    (12) ids -> . ID
    (90) str -> . STR
    (93) num -> . NUMBER
    (118) boolean -> . false
    (119) boolean -> . true
    (120) boolean -> . var

  ! shift/reduce conflict for end resolved as shift
  ! shift/reduce conflict for error resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for LBRACE resolved as shift
  ! shift/reduce conflict for int resolved as shift
  ! shift/reduce conflict for bool resolved as shift
  ! shift/reduce conflict for string resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for up resolved as shift
  ! shift/reduce conflict for down resolved as shift
  ! shift/reduce conflict for left resolved as shift
  ! shift/reduce conflict for right resolved as shift
  ! shift/reduce conflict for knockup resolved as shift
  ! shift/reduce conflict for knockdown resolved as shift
  ! shift/reduce conflict for knockright resolved as shift
  ! shift/reduce conflict for knockleft resolved as shift
  ! shift/reduce conflict for vision resolved as shift
  ! shift/reduce conflict for input resolved as shift
  ! shift/reduce conflict for STR resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for false resolved as shift
  ! shift/reduce conflict for true resolved as shift
  ! shift/reduce conflict for var resolved as shift
    end             shift and go to state 53
    error           shift and go to state 23
    PLR             reduce using rule 74 (expression -> .)
    PLL             reduce using rule 74 (expression -> .)
    PLUS            reduce using rule 74 (expression -> .)
    MNR             reduce using rule 74 (expression -> .)
    MNL             reduce using rule 74 (expression -> .)
    TMR             reduce using rule 74 (expression -> .)
    TML             reduce using rule 74 (expression -> .)
    TIMES           reduce using rule 74 (expression -> .)
    DVR             reduce using rule 74 (expression -> .)
    DVL             reduce using rule 74 (expression -> .)
    DIVIDE          reduce using rule 74 (expression -> .)
    PWR             reduce using rule 74 (expression -> .)
    PWL             reduce using rule 74 (expression -> .)
    POWER           reduce using rule 74 (expression -> .)
    MINUS           shift and go to state 28
    LBRACE          shift and go to state 29
    int             shift and go to state 30
    bool            shift and go to state 31
    string          shift and go to state 32
    ID              shift and go to state 33
    up              shift and go to state 36
    down            shift and go to state 37
    left            shift and go to state 38
    right           shift and go to state 39
    knockup         shift and go to state 40
    knockdown       shift and go to state 41
    knockright      shift and go to state 42
    knockleft       shift and go to state 43
    vision          shift and go to state 44
    input           shift and go to state 45
    STR             shift and go to state 46
    NUMBER          shift and go to state 34
    false           shift and go to state 47
    true            shift and go to state 48
    var             shift and go to state 35

  ! MINUS           [ reduce using rule 74 (expression -> .) ]
  ! end             [ reduce using rule 74 (expression -> .) ]
  ! error           [ reduce using rule 74 (expression -> .) ]
  ! LBRACE          [ reduce using rule 74 (expression -> .) ]
  ! int             [ reduce using rule 74 (expression -> .) ]
  ! bool            [ reduce using rule 74 (expression -> .) ]
  ! string          [ reduce using rule 74 (expression -> .) ]
  ! ID              [ reduce using rule 74 (expression -> .) ]
  ! up              [ reduce using rule 74 (expression -> .) ]
  ! down            [ reduce using rule 74 (expression -> .) ]
  ! left            [ reduce using rule 74 (expression -> .) ]
  ! right           [ reduce using rule 74 (expression -> .) ]
  ! knockup         [ reduce using rule 74 (expression -> .) ]
  ! knockdown       [ reduce using rule 74 (expression -> .) ]
  ! knockright      [ reduce using rule 74 (expression -> .) ]
  ! knockleft       [ reduce using rule 74 (expression -> .) ]
  ! vision          [ reduce using rule 74 (expression -> .) ]
  ! input           [ reduce using rule 74 (expression -> .) ]
  ! STR             [ reduce using rule 74 (expression -> .) ]
  ! NUMBER          [ reduce using rule 74 (expression -> .) ]
  ! false           [ reduce using rule 74 (expression -> .) ]
  ! true            [ reduce using rule 74 (expression -> .) ]
  ! var             [ reduce using rule 74 (expression -> .) ]

    sentence                       shift and go to state 54
    cfunc                          shift and go to state 15
    expression                     shift and go to state 16
    logic                          shift and go to state 17
    define                         shift and go to state 18
    assignment                     shift and go to state 19
    move                           shift and go to state 20
    ping                           shift and go to state 21
    sensor                         shift and go to state 22
    ids                            shift and go to state 24
    str                            shift and go to state 25
    num                            shift and go to state 26
    boolean                        shift and go to state 27

state 14

    (34) sentencess -> sentence .

    end             reduce using rule 34 (sentencess -> sentence .)
    error           reduce using rule 34 (sentencess -> sentence .)
    MINUS           reduce using rule 34 (sentencess -> sentence .)
    LBRACE          reduce using rule 34 (sentencess -> sentence .)
    int             reduce using rule 34 (sentencess -> sentence .)
    bool            reduce using rule 34 (sentencess -> sentence .)
    string          reduce using rule 34 (sentencess -> sentence .)
    ID              reduce using rule 34 (sentencess -> sentence .)
    up              reduce using rule 34 (sentencess -> sentence .)
    down            reduce using rule 34 (sentencess -> sentence .)
    left            reduce using rule 34 (sentencess -> sentence .)
    right           reduce using rule 34 (sentencess -> sentence .)
    knockup         reduce using rule 34 (sentencess -> sentence .)
    knockdown       reduce using rule 34 (sentencess -> sentence .)
    knockright      reduce using rule 34 (sentencess -> sentence .)
    knockleft       reduce using rule 34 (sentencess -> sentence .)
    vision          reduce using rule 34 (sentencess -> sentence .)
    input           reduce using rule 34 (sentencess -> sentence .)
    STR             reduce using rule 34 (sentencess -> sentence .)
    NUMBER          reduce using rule 34 (sentencess -> sentence .)
    false           reduce using rule 34 (sentencess -> sentence .)
    true            reduce using rule 34 (sentencess -> sentence .)
    var             reduce using rule 34 (sentencess -> sentence .)
    PLR             reduce using rule 34 (sentencess -> sentence .)
    PLL             reduce using rule 34 (sentencess -> sentence .)
    PLUS            reduce using rule 34 (sentencess -> sentence .)
    MNR             reduce using rule 34 (sentencess -> sentence .)
    MNL             reduce using rule 34 (sentencess -> sentence .)
    TMR             reduce using rule 34 (sentencess -> sentence .)
    TML             reduce using rule 34 (sentencess -> sentence .)
    TIMES           reduce using rule 34 (sentencess -> sentence .)
    DVR             reduce using rule 34 (sentencess -> sentence .)
    DVL             reduce using rule 34 (sentencess -> sentence .)
    DIVIDE          reduce using rule 34 (sentencess -> sentence .)
    PWR             reduce using rule 34 (sentencess -> sentence .)
    PWL             reduce using rule 34 (sentencess -> sentence .)
    POWER           reduce using rule 34 (sentencess -> sentence .)


state 15

    (35) sentence -> cfunc .

    end             reduce using rule 35 (sentence -> cfunc .)
    error           reduce using rule 35 (sentence -> cfunc .)
    MINUS           reduce using rule 35 (sentence -> cfunc .)
    LBRACE          reduce using rule 35 (sentence -> cfunc .)
    int             reduce using rule 35 (sentence -> cfunc .)
    bool            reduce using rule 35 (sentence -> cfunc .)
    string          reduce using rule 35 (sentence -> cfunc .)
    ID              reduce using rule 35 (sentence -> cfunc .)
    up              reduce using rule 35 (sentence -> cfunc .)
    down            reduce using rule 35 (sentence -> cfunc .)
    left            reduce using rule 35 (sentence -> cfunc .)
    right           reduce using rule 35 (sentence -> cfunc .)
    knockup         reduce using rule 35 (sentence -> cfunc .)
    knockdown       reduce using rule 35 (sentence -> cfunc .)
    knockright      reduce using rule 35 (sentence -> cfunc .)
    knockleft       reduce using rule 35 (sentence -> cfunc .)
    vision          reduce using rule 35 (sentence -> cfunc .)
    input           reduce using rule 35 (sentence -> cfunc .)
    STR             reduce using rule 35 (sentence -> cfunc .)
    NUMBER          reduce using rule 35 (sentence -> cfunc .)
    false           reduce using rule 35 (sentence -> cfunc .)
    true            reduce using rule 35 (sentence -> cfunc .)
    var             reduce using rule 35 (sentence -> cfunc .)
    PLR             reduce using rule 35 (sentence -> cfunc .)
    PLL             reduce using rule 35 (sentence -> cfunc .)
    PLUS            reduce using rule 35 (sentence -> cfunc .)
    MNR             reduce using rule 35 (sentence -> cfunc .)
    MNL             reduce using rule 35 (sentence -> cfunc .)
    TMR             reduce using rule 35 (sentence -> cfunc .)
    TML             reduce using rule 35 (sentence -> cfunc .)
    TIMES           reduce using rule 35 (sentence -> cfunc .)
    DVR             reduce using rule 35 (sentence -> cfunc .)
    DVL             reduce using rule 35 (sentence -> cfunc .)
    DIVIDE          reduce using rule 35 (sentence -> cfunc .)
    PWR             reduce using rule 35 (sentence -> cfunc .)
    PWL             reduce using rule 35 (sentence -> cfunc .)
    POWER           reduce using rule 35 (sentence -> cfunc .)


state 16

    (36) sentence -> expression .
    (69) expression -> expression . plus expression
    (70) expression -> expression . minus expression
    (71) expression -> expression . times expression
    (72) expression -> expression . divide expression
    (73) expression -> expression . power expression
    (75) plus -> . PLR
    (76) plus -> . PLL
    (77) plus -> . PLUS
    (78) minus -> . MNR
    (79) minus -> . MNL
    (80) minus -> . MINUS
    (81) times -> . TMR
    (82) times -> . TML
    (83) times -> . TIMES
    (84) divide -> . DVR
    (85) divide -> . DVL
    (86) divide -> . DIVIDE
    (87) power -> . PWR
    (88) power -> . PWL
    (89) power -> . POWER

  ! shift/reduce conflict for PLR resolved as shift
  ! shift/reduce conflict for PLL resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MNR resolved as shift
  ! shift/reduce conflict for MNL resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TMR resolved as shift
  ! shift/reduce conflict for TML resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DVR resolved as shift
  ! shift/reduce conflict for DVL resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for PWR resolved as shift
  ! shift/reduce conflict for PWL resolved as shift
  ! shift/reduce conflict for POWER resolved as shift
    end             reduce using rule 36 (sentence -> expression .)
    error           reduce using rule 36 (sentence -> expression .)
    LBRACE          reduce using rule 36 (sentence -> expression .)
    int             reduce using rule 36 (sentence -> expression .)
    bool            reduce using rule 36 (sentence -> expression .)
    string          reduce using rule 36 (sentence -> expression .)
    ID              reduce using rule 36 (sentence -> expression .)
    up              reduce using rule 36 (sentence -> expression .)
    down            reduce using rule 36 (sentence -> expression .)
    left            reduce using rule 36 (sentence -> expression .)
    right           reduce using rule 36 (sentence -> expression .)
    knockup         reduce using rule 36 (sentence -> expression .)
    knockdown       reduce using rule 36 (sentence -> expression .)
    knockright      reduce using rule 36 (sentence -> expression .)
    knockleft       reduce using rule 36 (sentence -> expression .)
    vision          reduce using rule 36 (sentence -> expression .)
    input           reduce using rule 36 (sentence -> expression .)
    STR             reduce using rule 36 (sentence -> expression .)
    NUMBER          reduce using rule 36 (sentence -> expression .)
    false           reduce using rule 36 (sentence -> expression .)
    true            reduce using rule 36 (sentence -> expression .)
    var             reduce using rule 36 (sentence -> expression .)
    PLR             shift and go to state 60
    PLL             shift and go to state 61
    PLUS            shift and go to state 62
    MNR             shift and go to state 63
